--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
      <title>GITHUB</title>
   </head>
   <body style="Text-align:center; color:red">
-     WHATEVER
+    <b>WHATEVER</b>
   </body>
 </html>       
